@@ -1,4 +1,3 @@
-HW and SW filters settings in the same place
 User can type any aspect ratio and zoom
 Video preview on progress bar
 Improve radio stations
