@@ -25,7 +25,7 @@
 
 #include <QStringList>
 
-class Writer : protected ModuleCommon, public ModuleParams, public BasicIO
+class Writer : public ModuleCommon, public ModuleParams, public BasicIO
 {
 public:
 	static Writer *create(const QString &, const QStringList &modNames = QStringList());
